Tested. Added READMe for instructions on how to use

--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -9,9 +9,8 @@ services:
       - MYSQL_PASSWORD=wordpress
     volumes:
       - db-data:/var/lib/mysql
-  web:
-    image: "civicrm:5.1.2"
-    #restart: always
+  www:
+    image: "civicrm-wp-docker:5.25.0"
     ports:
       - 8080:80
     environment:
@@ -20,7 +19,7 @@ services:
       - WORDPRESS_DB_NAME=wordpress
       - WORDPRESS_DB_PASSWORD=wordpress
     volumes:
-      - ./wordpress:/var/www/html
+      - ./www:/var/www/html
     depends_on:
       - db
 volumes:
